--- a/frontend/src/app/pages/flight/flight.component.html
+++ b/frontend/src/app/pages/flight/flight.component.html
@@ -1,5 +1,5 @@
 <div class="md:w-[1366px] md:h-[520px]">
-  <div class="bg-red-300 hover:overflow-y-scroll overflow-y-hidden h-full">
+  <div class="bg-white hover:overflow-y-scroll overflow-y-hidden h-full">
     <app-flight-item></app-flight-item>
   </div>
 </div>
